--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -774,6 +774,8 @@
 }
 
 .section-title {
+  word-spacing: 2.5rem;
+  margin: 0 2.5rem;
   padding-top: 5rem;
   color: var(--artificia-blue);
   text-shadow: var(--artificia-blue-text-glow);
