--- a/sass/main.css
+++ b/sass/main.css
@@ -1701,6 +1701,16 @@ body {
 
 @media only screen and (max-width: 1406px) {
   .section-us__container2 {
+    -ms-grid-columns: (30rem)[2];
+        grid-template-columns: repeat(2, 30rem);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 1385px) {
+  .section-us__container2 {
     -ms-grid-columns: (minmax(35rem, 1fr))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
   }
@@ -1791,7 +1801,7 @@ body {
 /* From 768px to 1023px */
 @media only screen and (max-width: 1023px) {
   .nav__item {
-    margin-right: 0;
+    margin-right: 1rem;
     min-width: 75px;
   }
   .section-us__profiles {
@@ -2000,15 +2010,14 @@ body {
     font-size: 1.5rem;
   }
   .lunagridcontainer {
-    -ms-grid-rows: 1fr 250px;
-        grid-template-rows: 1fr 250px;
+    -ms-grid-rows: 200px 1fr;
+        grid-template-rows: 200px 1fr;
   }
   .luna-description {
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
+    -ms-grid-row: 2;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
-    grid-area: 1 / 1 / 2 / 4;
+    grid-area: 2 / 1 / 2 / 4;
   }
   .luna-description::before {
     font-size: 2rem;
@@ -2021,11 +2030,11 @@ body {
     margin: 0 -1rem;
   }
   .lunasubcontainer {
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
-    grid-area: 2 / 1 / 3 / 4;
+    grid-area: 1 / 1 / 3 / 4;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -2160,6 +2169,9 @@ body {
 }
 
 @media only screen and (max-width: 620px) {
+  .nav__title {
+    font-size: 2.5rem;
+  }
   .section-us__profiles--title2 {
     margin-left: 2rem;
     margin-right: 2rem;
@@ -2323,6 +2335,9 @@ body {
   .nav__title {
     font-size: 2rem;
   }
+  .banner-box {
+    top: 20%;
+  }
   .header__description {
     height: 30%;
     width: 55%;
@@ -2340,6 +2355,13 @@ body {
 }
 
 @media only screen and (max-width: 500px) {
+  .nav__title {
+    display: none;
+  }
+  .lunagridcontainer {
+    -ms-grid-rows: 150px 1fr;
+        grid-template-rows: 150px 1fr;
+  }
   .box {
     height: 600px;
   }
@@ -2347,7 +2369,7 @@ body {
     height: 600px;
   }
   .banner-box {
-    top: 25%;
+    top: 15%;
     left: 50%;
     margin-left: -150px;
     height: 450px;
@@ -2571,6 +2593,26 @@ body {
 }
 
 @media only screen and (max-width: 360px) {
+  .lunagridcontainer {
+    -ms-grid-rows: 100px 1fr;
+        grid-template-rows: 100px 1fr;
+  }
+  .lunaprofilecontainer {
+    height: 100px;
+  }
+  .banner-box {
+    top: 15%;
+    left: 50%;
+    margin-left: -125px;
+    height: 450px;
+    max-width: 250px;
+  }
+  .header-banner img {
+    width: 250px;
+  }
+  .header-subtitle {
+    font-size: 1.5rem;
+  }
   .footer {
     -ms-grid-columns: (100px)[3];
         grid-template-columns: repeat(3, 100px);
