--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -90,6 +90,29 @@
 
 //HEADER
 
+.header-title-insert {
+  background-color: var(--color-gray-dark-3);
+  height: auto;
+  text-align: center;
+
+  font-size: 6rem;
+  font-family: "Ultra", sans-serif;
+  color: var(--artificia-blue);
+  text-shadow: var(--artificia-blue-text-glow);
+}
+
+.header-subtitle-insert {
+  background-color: var(--color-gray-dark-3);
+  height: 7rem;
+  padding-bottom: 3rem;
+  text-align: center;
+  word-spacing: 2rem;
+
+  font-size: 3rem;
+  font-family: "Ultra", sans-serif;
+  color: var(--color-gray-dark-1);
+}
+
 .header {
   // background-color: rgb(36, 36, 36);
   // border-radius: 15px 50px;
@@ -124,11 +147,12 @@
   &__description {
     background-color: var(--color-gray-dark-3);
     flex: 0 0 5rem;
-    padding-left: 2%;
     border-radius: 2rem 2rem 0 0;
     border-width: 5px;
     border-style: solid none none none;
     border-color: var(--color-gray-dark-2);
+
+    padding-left: 0.5rem;
 
     // clip-path: polygon(0 0, 90% 0, 71% 100%, 0 100%);
 
@@ -145,11 +169,13 @@
     font-weight: normal;
     font-style: normal;
 
-    // color: var(--artificia-blue);
-    // text-shadow: var(--artificia-blue-text-glow);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__title {
+    text-align: center;
     font-size: 7vh;
     color: var(--artificia-blue);
     text-shadow: var(--artificia-blue-text-glow);
@@ -158,7 +184,7 @@
 
   &__body {
     font-size: 3rem;
-    // color: var(--color-gray-light-2);
+    word-spacing: 1rem;
   }
 }
 
@@ -855,6 +881,14 @@
 }
 
 .technical-img {
+  height: 100%;
+  border: 3px solid var(--color-primary);
+  border-radius: 3rem;
+  box-shadow: 1 1 3rem rgba(0, 0, 0, 0.4);
+  display: none;
+}
+
+.technical-img-index {
   height: 100%;
   border: 3px solid var(--color-primary);
   border-radius: 3rem;
