--- a/sass/main.css
+++ b/sass/main.css
@@ -176,6 +176,27 @@ body {
   color: red;
 }
 
+.header-title-insert {
+  background-color: var(--color-gray-dark-3);
+  height: auto;
+  text-align: center;
+  font-size: 6rem;
+  font-family: "Ultra", sans-serif;
+  color: var(--artificia-blue);
+  text-shadow: var(--artificia-blue-text-glow);
+}
+
+.header-subtitle-insert {
+  background-color: var(--color-gray-dark-3);
+  height: 7rem;
+  padding-bottom: 3rem;
+  text-align: center;
+  word-spacing: 2rem;
+  font-size: 3rem;
+  font-family: "Ultra", sans-serif;
+  color: var(--color-gray-dark-1);
+}
+
 .header {
   background-color: var(--color-primary-light);
   background-size: contain;
@@ -217,11 +238,11 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 5rem;
           flex: 0 0 5rem;
-  padding-left: 2%;
   border-radius: 2rem 2rem 0 0;
   border-width: 5px;
   border-style: solid none none none;
   border-color: var(--color-gray-dark-2);
+  padding-left: 0.5rem;
   text-align: center;
   position: absolute;
   height: 25%;
@@ -234,9 +255,20 @@ body {
   font-family: "ultraregular", sans-serif;
   font-weight: normal;
   font-style: normal;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header__title {
+  text-align: center;
   font-size: 7vh;
   color: var(--artificia-blue);
   text-shadow: var(--artificia-blue-text-glow);
@@ -245,6 +277,7 @@ body {
 
 .header__body {
   font-size: 3rem;
+  word-spacing: 1rem;
 }
 
 .background-gradient {
@@ -1035,6 +1068,15 @@ body {
   display: none;
 }
 
+.technical-img-index {
+  height: 100%;
+  border: 3px solid var(--color-primary);
+  border-radius: 3rem;
+  -webkit-box-shadow: 1 1 3rem rgba(0, 0, 0, 0.4);
+          box-shadow: 1 1 3rem rgba(0, 0, 0, 0.4);
+  display: none;
+}
+
 .carousel-img-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1788,7 +1830,7 @@ body {
     grid-area: 1 / 1 / 3 / 3;
   }
   .header__title {
-    font-size: 6rem;
+    font-size: 5rem;
   }
   .header__body {
     font-size: 3rem;
@@ -1991,6 +2033,13 @@ body {
     font-size: 2rem;
     margin: 3rem 2rem;
   }
+  .header-title-insert {
+    font-size: 5rem;
+  }
+  .header-subtitle-insert {
+    font-size: 3rem;
+    height: auto;
+  }
   .header__title {
     font-size: 4rem;
   }
@@ -2186,7 +2235,7 @@ body {
   }
   .prev,
   .next {
-    top: 35%;
+    top: 50%;
   }
   .dot {
     height: 0.5rem;
@@ -2209,7 +2258,7 @@ body {
     font-size: 1.8rem;
   }
   .tech-img-container {
-    height: 200px;
+    width: 300px;
   }
   .section-title {
     font-size: 4rem;
@@ -2363,6 +2412,22 @@ body {
     -ms-grid-rows: 150px 1fr;
         grid-template-rows: 150px 1fr;
   }
+  .tech-img-container {
+    width: 275px;
+    height: 250px;
+  }
+  .header {
+    border-top: none;
+  }
+  .header-title-insert {
+    font-size: 4rem;
+  }
+  .header-subtitle-insert {
+    font-size: 2.5rem;
+    line-height: 2.4rem;
+    height: auto;
+    padding: 1.5rem;
+  }
   .box {
     height: 600px;
   }
@@ -2413,6 +2478,10 @@ body {
     font-size: 1.75rem;
     -ms-grid-columns: (minmax(20rem, 1fr))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  }
+  .brooch-img {
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
   }
   .section-brooch__container {
     -webkit-box-align: stretch;
@@ -2541,12 +2610,12 @@ body {
     left: 50%;
   }
   .header__title {
-    font-size: 2.5rem;
+    font-size: 4rem;
     margin-bottom: -0.25rem;
   }
   .header__body {
-    font-size: 1.25rem;
-    line-height: 1.25rem;
+    font-size: 2.25rem;
+    line-height: 2rem;
   }
   .section-artificia__container {
     width: 325px;
@@ -2566,7 +2635,7 @@ body {
     display: none;
   }
   .section-us__profiles:last-child {
-    margin-bottom: 25rem;
+    margin-bottom: 35rem;
   }
   .btn--artificia {
     min-width: 20rem;
@@ -2616,6 +2685,20 @@ body {
   }
   .about-description {
     margin: 3rem auto;
+  }
+  .header__description {
+    height: 30%;
+    width: 90%;
+    top: 75%;
+    left: 50%;
+  }
+  .header__title {
+    font-size: 3rem;
+    margin-bottom: -0.25rem;
+  }
+  .header__body {
+    font-size: 2rem;
+    line-height: 2rem;
   }
   .footer {
     -ms-grid-columns: (100px)[3];
