Final touches April 10

--- a/sass/_queries.scss
+++ b/sass/_queries.scss
@@ -1055,8 +1055,9 @@
   // ABOUT.HTML
   // artificia.html
 
-  .brooch-img {
-    flex-shrink: 1;
+  .brooch-img-container {
+    width: 300px;
+    margin: 0 auto;
   }
 
   .section-brooch__container {
