--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -96,7 +96,7 @@
   text-align: center;
 
   font-size: 6rem;
-  font-family: "Ultra", sans-serif;
+  font-family: "", sans-serif;
   color: var(--artificia-blue);
   text-shadow: var(--artificia-blue-text-glow);
 }
@@ -109,7 +109,7 @@
   word-spacing: 2rem;
 
   font-size: 3rem;
-  font-family: "Ultra", sans-serif;
+  font-family: "ultraregular", sans-serif;
   color: var(--color-gray-dark-1);
 }
 
