--- a/sass/main.css
+++ b/sass/main.css
@@ -1241,6 +1241,7 @@ body {
 .brooch-img {
   height: auto;
   width: 100%;
+  max-width: 500px;
 }
 
 .section-about {
@@ -2387,6 +2388,9 @@ body {
     left: 10px;
     max-width: 9rem;
   }
+  .brooch-img {
+    display: none;
+  }
   .nav {
     height: 6rem;
     padding-top: 0.5rem;
@@ -2473,8 +2477,6 @@ body {
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 420px) {
   .footer {
-    -ms-grid-columns: (125px)[3];
-        grid-template-columns: repeat(3, 125px);
     grid-row-gap: 0.5rem;
   }
   .nav__item {
@@ -2654,6 +2656,7 @@ body {
   }
   .section-social .final-btn::after {
     width: 75px;
+    height: 40px;
     top: 90px;
   }
   .section-social__container {
@@ -2713,8 +2716,6 @@ body {
     line-height: 2rem;
   }
   .footer {
-    -ms-grid-columns: (100px)[3];
-        grid-template-columns: repeat(3, 100px);
     grid-row-gap: 0.5rem;
   }
 }
