--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1034,6 +1034,7 @@
 .brooch-img {
   height: auto;
   width: 100%;
+  max-width: 500px;
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
