Additional bug fixes 2 section-artificia

--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -213,7 +213,7 @@
     border-radius: 15px 50px;
     min-height: 30rem;
 
-    position: relative;
+    // position: relative;
     margin: 4rem 4rem;
     max-width: 80vw;
     max-width: 800px;
