--- a/sass/main.css
+++ b/sass/main.css
@@ -303,7 +303,6 @@ body {
           box-shadow: inset 3px 4px 10px #111;
   border-radius: 15px 50px;
   min-height: 30rem;
-  position: relative;
   margin: 4rem 4rem;
   max-width: 80vw;
   max-width: 800px;
@@ -2632,11 +2631,12 @@ body {
     line-height: 2rem;
   }
   .section-artificia__container {
-    width: 325px;
+    width: 300px;
+    left: 50%;
   }
   .section-artificia__left {
-    padding: 2rem;
-    margin: 0 2rem;
+    padding: 1rem 0 2rem 0;
+    margin: 0 1.25rem;
   }
   .section-artificia__right {
     position: absolute;
